chore: Add item-related files and dependencies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1 class="text-3xl font-bold underline">Hello world!</h1>
+<h1 class="text-3xl font-bold underline">Hello world! ehhe</h1>
+<pre>
+
+  {{ selectDndItems$ | async | json }}
+</pre>
