--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<the-compendium-layout
-  [dndItems]="(selectDndItems$ | async) ?? []"
-></the-compendium-layout>
+<div
+  class="flex sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-screen-2xl p-5"
+>
+  <the-compendium-layout
+    [dndItems]="(selectDndItems$ | async) ?? []"
+  ></the-compendium-layout>
+</div>
