--- a/src/app/layout/the-compendium/the-compendium.component.html
+++ b/src/app/layout/the-compendium/the-compendium.component.html
@@ -1,33 +1,36 @@
 <div
-  class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
+  class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4"
 >
   @for (item of dndItems; track item.id) {
-  <div class="card-container">
-    <p-card
-      class="shadow-lg overflow-hidden"
-      [header]="item.name"
-      [subheader]="'subheader'"
-      [style]="{ width: '360px' }"
-    >
-      <ng-template pTemplate="header">
-        <img
-          alt="Card"
-          src="https://primefaces.org/cdn/primeng/images/card-ng.jpg"
+  <p-card
+    [style]="{ display: 'flex', flexDirection: 'column', height: '100%' }"
+    [styleClass]="'h-full'"
+    [header]="item.name"
+    [subheader]="'subheader'"
+  >
+    <ng-template pTemplate="header">
+      <img
+        alt="Card"
+        src="https://primefaces.org/cdn/primeng/images/card-ng.jpg"
+        class="w-full h-40 object-cover"
+      />
+    </ng-template>
+    <p class="flex-grow">{{ item.description }}</p>
+    <ng-template pTemplate="footer">
+      <div class="flex gap-3 mt-auto">
+        <p-button
+          label="Cancel"
+          severity="secondary"
+          [style]="{ width: '100%' }"
+          styleClass="w-full"
         />
-      </ng-template>
-      <p>Lorem ipsum dolor sit amet...</p>
-      <ng-template pTemplate="footer">
-        <div class="flex gap-3 mt-1">
-          <p-button
-            label="Cancel"
-            severity="secondary"
-            class="w-full"
-            styleClass="w-full"
-          />
-          <p-button label="Save" class="w-full" styleClass="w-full" />
-        </div>
-      </ng-template>
-    </p-card>
-  </div>
+        <p-button
+          label="Save"
+          [style]="{ width: '100%' }"
+          styleClass="w-full"
+        />
+      </div>
+    </ng-template>
+  </p-card>
   }
 </div>
