--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div
   class="flex sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-screen-2xl p-5"
 >
-  <the-compendium-layout
-    [dndItems]="(selectDndItems$ | async) ?? []"
-  ></the-compendium-layout>
+  <the-compendium-layout></the-compendium-layout>
 </div>
