--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,11 @@
   @tailwind components;
   @tailwind utilities;
 }
+
+:host {
+  --background-color: rgba(	0, 139, 139, 0.8);
+}
+
+body {
+  background-color: var(--background-color);
+}
