--- a/src/app/views/items-grid/items-grid.component.html
+++ b/src/app/views/items-grid/items-grid.component.html
@@ -1,3 +1,7 @@
+
+<div
+  class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
+>
 @for (item of coolItems; track item.id) {
   <div class="card-container">
     <p-card
@@ -25,3 +29,4 @@
     </p-card>
   </div>
   }
+</div>
