--- a/src/app/views/controller/controller.component.html
+++ b/src/app/views/controller/controller.component.html
@@ -1,3 +1,3 @@
 <div class="flex flex-col gap-4">
-  <p-button label="Add Bag" (onClick)="openBagDialog()"></p-button>
+  <p-button label="Ajouter un sac" (onClick)="createNewBag.emit()"></p-button>
 </div>
