--- a/src/app/views/bags-grid/bags-grid.component.html
+++ b/src/app/views/bags-grid/bags-grid.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-row gap-4">
   @for (bag of bags; track bag.id) {
-    <p-card [header]="bag.name" class="max-w-[200px]">
+    <p-card [header]="bag.name" class="max-w-[200px] relative">
+      <p-button (click)="deleteBag.emit(bag.id)" styleClass="extra-small-button" icon="pi pi-times" [outlined]="true" size="small" [rounded]="true" [raised]="true" severity="danger" />
       <p>{{ bag.description }}</p>
     </p-card>
   }
