--- a/src/app/dialogs/item-details-component/item-details-component.component.html
+++ b/src/app/dialogs/item-details-component/item-details-component.component.html
@@ -1,7 +1,1 @@
-<div>
-  <h1>{{ item()?.name }}</h1>
-</div>
-<div>
-  <h2>Description</h2>
-  <p>{{ item()?.description }}</p>
-</div>
+<app-form-item></app-form-item>
