--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div
-  class="flex sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-screen-2xl p-5"
->
+<div class="flex p-5 md:w-full lg:w-4/5 xl:w-3/5">
   <the-compendium-layout></the-compendium-layout>
 </div>
