--- a/src/app/layout/the-compendium/the-compendium.component.html
+++ b/src/app/layout/the-compendium/the-compendium.component.html
@@ -1,6 +1,13 @@
-<div class="flex flex-col gap-8">
-  <app-controller (createNewItem)="createNewItem()" (createNewBag)="createNewBag()"></app-controller>
-  <app-bags-grid (deleteBag)="deleteBag($event)" [bags]="(selectBags$ | async) ?? []"></app-bags-grid>
-  <app-items-grid [coolItems]="(selectDndItems$ | async ) ?? []" (itemSelected)="openItem($event)"></app-items-grid>
+<div class="grid grid-cols-1 gap-8">
+  <app-controller class="col-span-1" (createNewItem)="createNewItem()" (createNewBag)="createNewBag()"></app-controller>
+  <app-bags-grid class="col-span-1" (deleteBag)="deleteBag($event)" [bags]="(selectBags$ | async) ?? []"></app-bags-grid>
+  <app-items-grid
+    class="col-span-1"
+    [coolItems]="(selectDndItems$ | async ) ?? []"
+    (itemSelected)="openItem($event)"
+    (itemDeleted)="deleteItem($event)"
+  >
+
+  </app-items-grid>
 </div>
 
