--- a/src/app/views/bags-grid/bags-grid.component.html
+++ b/src/app/views/bags-grid/bags-grid.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row gap-4">
+<!-- <div class="flex flex-row gap-4">
   @for (bag of bags; track bag.id) {
     <p-card [header]="bag.name" styleClass="w-[200px] h-[200px] relative" >
       <p-button (click)="deleteBag.emit(bag.id)" styleClass="extra-small-button" icon="pi pi-times" [outlined]="true" size="small" [rounded]="true" [raised]="true" severity="danger" />
@@ -18,4 +18,38 @@
     <p-skeleton width="100%" height="1rem" />
 
   </div>
+</div> -->
+
+
+<div class="w-full bg-slate-200 rounded pt-5">
+
+  <p-carousel
+
+  [value]="bags"
+  [numVisible]="3"
+  [numScroll]="3"
+  [circular]="false"
+  [responsiveOptions]="responsiveOptions">
+  <ng-template let-bag pTemplate="item">
+    <div class="border-1 surface-border border-round m-2 p-3 rounded bg-white flex flex-col items-center relative">
+      <div class="mb-3">
+        <div class="relative mx-auto ">
+          <img
+          class="max-h-20"
+          src="assets/imgs/bag/big-bag.png"
+          [alt]="bag.name"
+          />
+        </div>
+      </div>
+      <div class="mb-3 font-medium">
+        {{ bag.name }}
+      </div>
+      <div>
+        <p-button class="h-10 w-10" styleClass="h-10 w-10" (click)="deleteBag.emit(bag.id)" icon="pi pi-times" [outlined]="true" [rounded]="true" [raised]="true" severity="danger" />
+      </div>
+      <ngx-spinner [name]="bag.id" size="large" [fullScreen]="false"></ngx-spinner>
+    </div>
+  </ng-template>
+</p-carousel>
+
 </div>
