--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,13 @@
     font-size: 8px;
   }
 }
+
+p-inputNumber{
+  input{
+    width: 100%;
+  }
+}
+
 body {
   background-color: var(--background-color);
 }
