--- a/src/app/dialogs/entity-view-edit-dialog-controller/item-details-component/item-details-component.component.html
+++ b/src/app/dialogs/entity-view-edit-dialog-controller/item-details-component/item-details-component.component.html
@@ -1,7 +1,7 @@
 @if (isViewMode()) {
-  <app-single-item-view [item]="item()" (edit)="toggleEdit()"></app-single-item-view>
+  <app-single-item-view [item]="selectedItem()" (edit)="toggleEdit()"></app-single-item-view>
 }@else {
-  <app-form-item [item]="item()" (submitForm)="onSubmit($event)" (formValid)="formValid.set($event)"></app-form-item>
+  <app-form-item [item]="selectedItem()" (submitForm)="onSubmit($event)" (formValid)="formValid.set($event)"></app-form-item>
 }
 
 <p-divider />
